# vsi-examples

./: .gitignore  CMakeLists.txt  README.md
adc_spi/: .#adc_spi.cc  adc_spi.cc  adc_spi.h
aie_emulation/aisrc/: evalkernel.cc
aie_emulation/hls/: pass.cpp
aie_emulation/swsrc/: validator.cpp
aie_example_kernels/img_processing/: README.txt  lena512color.raw
aie_example_kernels/load_memory_example/: load_memory.cc  master.cc  slave.cc
aie_example_kernels/simple_kernels/: aggregate.cc  compute0.cc  compute1.cc  distribute.cc
aie_example_kernels/subgraph_example/: average_div.cc  include.h  kernels.h  sub_graph.cc  weighted_sum.cc
aie_example_kernels/vectorize_examples/: test_psuedo_complex.cc
aie_example_kernels/viterbi_decoder/: Decoder.cc  ViterbiMain.cc  input_16_bits.txt  input_28_bits.txt
aie_vectorize_tests/aie_function_test/: all_stap.cc  kernels.h
aie_vectorize_tests/aie_vectorizing/: test.cc
aie_vectorize_tests/chessPipelineTest/: chessPipelineTest.cc
aie_vectorize_tests/complex_mult/: _complex.h  complex_mult.cc
aie_vectorize_tests/constructorTreeOpt/: constructorTreeOpt.cc
aie_vectorize_tests/ffttest/: fft.cc  fft.h
aie_vectorize_tests/gui_test/: gui_test.cc
aie_vectorize_tests/large_vector_test/: large_vector.cc
aie_vectorize_tests/localMemAlign/: localMemAlign.cc
aie_vectorize_tests/localMemAlign_v2/: localMemAlign_v2.cc
aie_vectorize_tests/memcpy_window_scalarLoad/: memcpy_window_scalarLoad.cc
aie_vectorize_tests/memcpy_window_vectorLoad/: memcpy_window_vectorLoad.cc
aie_vectorize_tests/mixed_fixed_point_test/: mixed_fixed_point.cc
aie_vectorize_tests/nestedLoopTest/: nestedLoopTest.cc  vector_complex_add.cc
aie_vectorize_tests/parallel_kernels/: hlsFFT_vsi_mod.cc
aie_vectorize_tests/pass_by_ref_test/: pass_by_ref.cc
aie_vectorize_tests/performance_cholesky/: cholesky.cc  kernels.h
aie_vectorize_tests/performance_covariance/: covariance.cc
aie_vectorize_tests/performance_substitution/: kernels.h  substitution.cc
aie_vectorize_tests/pipe_example/: int_stream_pipe.cc
aie_vectorize_tests/rtp_arrayFloat/: rtp_arrayFloat.cc  runtime_param.h
aie_vectorize_tests/rtp_arrayInt16/: rtp_arrayInt16.cc
aie_vectorize_tests/sar_bp/: sar_bp.cc
astar/: AStar.h
benchmark_memory/: benchmark_memory.cc  benchmark_memory.h
benchmark_memory_simulation/: benchmark_memory.cc
blocking_read/: blocking_read.cc  blocking_read.h
cholesky/: cholesky.cpp  cholesky.h
device/: angle_table.java  arm_trajectory.java  dev_read_write.cxx  dev_read_write.h  gpio_rw.cxx  joy_stick.java  servo_command.java  test_java.cxx
example_1/: hls_stream_passthrough.cxx  hls_stream_passthrough.h  user_code.cxx  user_code.java  user_code.py
example_2/: random_access.cxx  typedef.cpp
example_c/: user_code.c
example_java_xmpp/: README.md  build.gradle  settings.gradle
facial_landmark_detection/: README.txt  face_detection.cxx  face_landmark.cxx
fft/: fft_top.cpp  fft_top.h
fft_control/: fft_control.cxx  fft_control.h  fft_control.py
flir_sw/: flir_lepton.cc  flir_lepton.h
gpio_toggle/: toggle.cxx
hls_master/: hls_master.cc  hls_master.h
hls_video/: convolution.cpp  convolution.h
hls_video/main/: CMakeLists.txt  Valve_original.csv  main_sc.cxx
image_algos/: image_algos.cc  image_algos.h
image_alogs/: image_algos.cc
include/: double_buffer.h  sort_x86.h  stream_mux.h
led_blinker/: blink.cc
memory/: mem_test.h  memory.cc
memoryrwtest/: mem_rwtest.cc  mem_rwtest.h  suputils.cpp  suputils.h
microphone/: microphone.cpp  microphone.h
packet_assemble/: packet_assemble.cc
pass_by_value/: pass_by_value.cc  pass_by_value.hh
pass_thru_r5/: pass_thru.cc
preset_yaml_files/: fft.yaml  inverter.yaml  main.yaml  sort.yaml
rdma_helper/: rdma_helper.cc  rdma_helper.h
reference/: ref_test.cpp  ref_test.h
regression/: regression_tests.cxx  regression_tests.h
rf_demo/: rf_demo.cc  rf_demo.h
simulator_example/: double_int.cc
sort/: sort.cc
sort_x86/: sort_x86.cc  sort_x86.h
stream_and_mem_test/: pl_process.cc  ps_driver.cc  stream_and_mem_test.cc  stream_and_mem_test.h
stream_ethernet/: stream_ethernet.cc  stream_ethernet.h  ws_packets.h
stream_mux/: source_sink.cc  stream_mux.cc  stream_mux.h
timer_blocks/: timer_blocks.cxx
typedef/: test.cc
univariate_linear_regression/: univariate_linear_regression.cc  univariate_linear_regression.h
viterbi_decoder/: hls_viterbi.cc
voice_recognition/: dev_read_write.cxx  dev_read_write.h  microphone_bg_listen.py  voice.cxx  voice.h
webcam/: image_algos.cc  webcam.cc  webcam.h  webcam_opencv.cc
webcam_opencv/: webcam_opencv.cc
xadc/: xadc_driver.cc  xadc_driver.h
xilinx_vlib/: xilinx_video_pipe.cc
(+284 files in other folders)
